...
                    SettingsScreen(
                        onBackButtonClicked = { navController.popBackStack() }
                    )
                }
                composable(route = HarmonyHubScreen.PlaylistSongList.name) {
                    PlaylistSongListScreen(
                        playlistName = "Playlist 1",
                        onBackButtonClicked = { navController.popBackStack() },
                        onAddButtonClicked = { navController.navigate(HarmonyHubScreen.AddSongToPlaylist.name) },
                        onPlaySongClicked = { navController.navigate(HarmonyHubScreen.Play.name) },
                        onAddToPlaylistClicked = { navController.navigate(HarmonyHubScreen.AddToPlaylistFromSong.name) },
                        onAddToFavoriteClicked = { /* Handle add to favorite logic */ },
                        onDeleteClicked = { /* Handle delete logic */ },
...
